--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/a/index.xhtml
@@ -4,130 +4,204 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:com="http://xmlns.jcp.org/jsf/component">
 <body>
-<ui:composition template="../../../../master/base.xhtml">
-
-    <ui:define name="htmlHead">
-        <com:scriptfile set="IGNITE"/>
-        <com:scriptfile path="qmm003.a.service.js"/>
-        <com:scriptfile path="qmm003.a.vm.js"/>
-        <com:scriptfile path="qmm003.a.start.js"/>
-    </ui:define>
-    <ui:define name="content">
-        <div id="functions-area">
-            <!-- A1_1 -->
-            <button tabindex="1">#{i18n.getText('QMM003_1')}</button>
-            <!-- A1_2 -->
-            <button tabindex="2" class="proceed">#{i18n.getText('QMM003_2')}</button>
-            <!-- A1_3 -->
-            <button tabindex="3" data-bind="enable: false">#{i18n.getText('QMM003_3')}</button>
-            <!-- A1_4 -->
-            <button tabindex="4">#{i18n.getText('QMM003_4')}</button>
-            <!-- A1_5 -->
-            <button tabindex="5">#{i18n.getText('QMM003_5')}</button>
-            <!-- A1_6 -->
-            <button tabindex="6" class="danger">#{i18n.getText('QMM003_6')}</button>
-            <!-- A1_7 -->
-            <button tabindex="7" class="danger">#{i18n.getText('QMM003_7')}</button>
-        </div>
-        <div id="contents-area" class="fixed-flex-layout">
-			<div class="fixed-flex-layout-left">
-				<!-- A2_1 -->
-				<div data-bind="ntsPanel:{width: '400px', height: '600px', direction: 'right', showIcon: true, visible: true}">
-					<!-- A2_2 -->
-					<div style="width: 400px" 
-						data-bind="ntsSearchBox: {
-							targetKey: 'code', 
-							mode:'igTree', 
-							comId:'rsdTree', 
-							items: items2, 
-							selected: singleSelectedCode, 
-							selectedKey: 'code', 
-							childField: 'childs', 
-							fields: ['name', 'code']}" />
-					<!-- A2_3 -->
-					<table id="rsdTree"
-						data-bind="ntsTreeGridView:{
-							width: 400,
-							rows: 20,
-							name: '#[#QMM003_8]', 
-							dataSource: items2,
-							value: singleSelectedCode,
-							headers: headers,
-							primaryKey: 'code',
-							childDataKey: 'childs',
-							primaryText: 'nodeText',
-							multiple: false,
-							enable: true,
-							showCheckBox: false}"></table>
-					<!-- A1_9 -->
-					<div class="label">#{i18n.getText('QMM003_10')}</div>
+	<ui:composition template="../../../../master/base.xhtml">
+	    <ui:define name="htmlHead">
+	        <com:scriptfile set="IGNITE"/>
+	        <com:scriptfile path="../share/constants.js"/>
+	        <com:scriptfile path="qmm003.a.service.js"/>
+	        <com:scriptfile path="qmm003.a.vm.js"/>
+	        <com:scriptfile path="qmm003.a.start.js"/>
+	        <com:ValidatorScript>
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.ResidentTaxPayeeCode
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.ResidentTaxPayeeName
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.ResidentTaxPayeeKanaName
+		        nts.uk.shr.com.primitive.Memo
+		        nts.uk.ctx.pr.transfer.dom.bank.AccountNumber
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.ResidentTaxPayeeSubscriberName
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.ResidentTaxPayeeDesignationNum
+		        nts.uk.ctx.pr.transfer.dom.rsdttaxpayee.CompileStationName
+		        nts.uk.shr.com.primitive.PostCode
+		    </com:ValidatorScript>
+	    </ui:define>
+	    <ui:define name="content">
+	        <div id="functions-area">
+	            <!-- A1_1 -->
+	            <button tabindex="1" data-bind="click: createNew">#{i18n.getText('QMM003_1')}</button>
+	            <!-- A1_2 -->
+	            <button tabindex="2" class="proceed" data-bind="enable: $root.errors.isEmpty, click: register">#{i18n.getText('QMM003_2')}</button>
+	            <!-- A1_3 -->
+	            <button tabindex="3" data-bind="enable: false">#{i18n.getText('QMM003_3')}</button>
+	            <!-- A1_4 -->
+	            <button tabindex="4" data-bind="click: openDialogQmm003e">#{i18n.getText('QMM003_4')}</button>
+	            <!-- A1_5 -->
+	            <button tabindex="5" data-bind="enable: false">#{i18n.getText('QMM003_5')}</button>
+	            <!-- A1_6 -->
+	            <button tabindex="6" class="danger" data-bind="enable: updateMode(), click: remove">#{i18n.getText('QMM003_6')}</button>
+	            <!-- A1_7 -->
+	            <button tabindex="7" class="danger" data-bind="enable: totalRtp() > 0, click: openDialogQmm003d">#{i18n.getText('QMM003_7')}</button>
+	        </div>
+	        <div id="contents-area" class="fixed-flex-layout">
+				<div class="fixed-flex-layout-left" style="padding-top: 20px; padding-left: 20px">
+					<!-- A2_1 -->
+					<div data-bind="ntsPanel:{width: '400px', height: '580px', direction: 'right', showIcon: true, visible: true}">
+						<!-- A2_2 -->
+						<div style="width: 400px" tabindex="8"
+							data-bind="ntsSearchBox: {
+								targetKey: 'code', 
+								mode:'igTree', 
+								comId:'rsdTree', 
+								items: items2, 
+								selected: selectedCode, 
+								selectedKey: 'code', 
+								childField: 'childs', 
+								fields: ['name', 'code']}" />
+						<!-- A2_3 -->
+						<table id="rsdTree" tabindex="9"
+							data-bind="ntsTreeGridView:{
+								width: 400,
+								rows: 20,
+								name: '#[#QMM003_8]', 
+								dataSource: items2,
+								value: selectedCode,
+								headers: headers,
+								primaryKey: 'code',
+								childDataKey: 'children',
+								primaryText: 'nodeText',
+								multiple: false,
+								enable: true,
+								initialExpandDepth: 1,
+								showCheckBox: false}"></table>
+						<!-- A2_9 -->
+						<div class="label" data-bind="text: dispTotalRtp" style="padding-top: 10px; text-align: right"></div>
+					</div>
+				</div>
+				<div class="fixed-flex-layout-right" data-bind="with: selectedResidentTaxPayee"  style="padding-top: 20px;">
+					<div class="valign-center control-group">
+						<!-- A3_1 -->
+						<div data-bind="ntsFormLabel: { required: true, constraint: ['ResidentTaxPayeeCode', 'ResidentTaxPayeeName'] }">#{i18n.getText('QMM003_9')}</div>
+						<!-- A3_2 -->
+						<input tabindex="10" id="A3_2" data-bind="ntsTextEditor: {
+							name: '#[QMM003_11]',
+							value: code,
+							constraint: 'ResidentTaxPayeeCode',
+							required: true, enable: $vm.updateMode() == false}" />
+						<!-- A3_3 -->
+						<input tabindex="11" id="A3_3" data-bind="ntsTextEditor: {
+							name: '#[QMM003_12]',
+							value: name,
+							constraint: 'ResidentTaxPayeeName',
+							required: true}" />
+						<!-- A3_4 -->
+						<button tabindex="12" data-bind="enable: $vm.updateMode() == false, click: $vm.openDialogQmm003b">#{i18n.getText('QMM003_13')}</button>
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_5 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'ResidentTaxPayeeKanaName' }">#{i18n.getText('QMM003_14')}</div>
+						<!-- A3_6 -->
+						<input tabindex="13" id="A3_6" data-bind="ntsTextEditor: {
+							name: '#[QMM003_14]',
+							value: kanaName,
+							constraint: 'ResidentTaxPayeeKanaName',
+							required: false}" />
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_7 -->
+						<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM003_15')}</div>
+						<!-- A3_8 -->
+						<div id="prefectureCbb" tabindex="14" data-bind="ntsComboBox: {
+							name: '都道府県',
+							options: $vm.listPrefectures,
+							optionsValue: 'code',
+							optionsText: 'name',
+							visibleItemsCount: 10,
+							value: prefectures,
+							required: true,
+							selectFirstIfNull: true,
+							columns: [
+								{ prop: 'name', length: 10 }
+							]}"></div>
+					</div>
+					<!-- A3_10 -->
+					<hr/>
+					<div class="valign-center control-group">
+						<!-- A3_11 -->
+						<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_16')}</div>
+						<!-- A3_12 -->
+						<button tabindex="15" data-bind="click: openDialogQmm003c">#{i18n.getText('QMM003_13')}</button>
+						<!-- A3_13 -->
+						<span class="label" data-bind="text: reportCd" style="padding-left: 20px"></span>
+						<!-- A3_14 -->
+						<span class="label" data-bind="text: reportName" style="padding-left: 20px"></span>
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_15 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'AccountNumber' }">#{i18n.getText('QMM003_17')}</div>
+						<!-- A3_16 -->
+						<input tabindex="16" id="A3_16" data-bind="ntsTextEditor: {
+							name: '#[QMM003_17]',
+							value: accountNumber,
+							constraint: 'AccountNumber',
+							required: false}" />
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_17 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'ResidentTaxPayeeSubscriberName' }">#{i18n.getText('QMM003_18')}</div>
+						<!-- A3_18 -->
+						<input tabindex="17" id="A3_18" data-bind="ntsTextEditor: {
+							name: '#[QMM003_18]',
+							value: subscriberName,
+							constraint: 'ResidentTaxPayeeSubscriberName',
+							required: false}" />
+					</div>
+					<!-- A3_19 -->
+					<hr/>
+					<div class="valign-center control-group">
+						<!-- A3_20 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'ResidentTaxPayeeDesignationNum' }">#{i18n.getText('QMM003_19')}</div>
+						<!-- A3_21 -->
+						<input tabindex="18" id="A3_21" data-bind="ntsTextEditor: {
+							name: '#[QMM003_19]',
+							value: designationNum,
+							constraint: 'ResidentTaxPayeeDesignationNum',
+							required: false}" />
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_22 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'PostCode' }">#{i18n.getText('QMM003_20')}</div>
+						<!-- A3_23 -->
+						<input tabindex="19" id="A3_18" data-bind="ntsTextEditor: {
+							name: '#[QMM003_20]',
+							value: postCode,
+							constraint: 'PostCode',
+							required: false}" />
+					</div>
+					<div class="valign-center control-group">
+						<!-- A3_24 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'CompileStationName' }">#{i18n.getText('QMM003_21')}</div>
+						<!-- A3_25 -->
+						<input tabindex="20" id="A3_18" data-bind="ntsTextEditor: {
+							name: '#[QMM003_21]',
+							value: compileStationName,
+							constraint: 'CompileStationName',
+							required: false}" />
+					</div>
+					<div class="valign-top control-group">
+						<!-- A3_26 -->
+						<div data-bind="ntsFormLabel: { required: false, constraint: 'Memo' }">#{i18n.getText('QMM003_22')}</div>
+						<!-- A3_27 -->
+						<textarea style="height: 150px" tabindex="21" data-bind="ntsMultilineEditor: {
+							value: memo,
+							name: '#[QMM002_22]',
+							constraint: 'Memo',
+							option: {width: '350px'},
+							readonly: false}" />
+					</div>
 				</div>
 			</div>
-			<div class="fixed-flex-layout-right">
-				<div class="valign-center control-group">
-					<!-- A3_1 -->
-					<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM003_9')}</div>
-					<!-- A3_2 -->
-					<!-- A3_3 -->
-					<!-- A3_4 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_5 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_14')}</div>
-					<!-- A3_6 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_7 -->
-					<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM003_15')}</div>
-					<!-- A3_8 -->
-					<!-- A3_9 -->
-				</div>
-				<!-- A3_10 -->
-				<hr/>
-				<div class="valign-center control-group">
-					<!-- A3_11 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_16')}</div>
-					<!-- A3_12 -->
-					<!-- A3_13 -->
-					<!-- A3_14 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_15 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_17')}</div>
-					<!-- A3_16 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_17 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_18')}</div>
-					<!-- A3_18 -->
-				</div>
-				<!-- A3_19 -->
-				<hr/>
-				<div class="valign-center control-group">
-					<!-- A3_20 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_19')}</div>
-					<!-- A3_21 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_22 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_20')}</div>
-					<!-- A3_23 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_24 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_21')}</div>
-					<!-- A3_25 -->
-				</div>
-				<div class="valign-center control-group">
-					<!-- A3_26 -->
-					<div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM003_22')}</div>
-					<!-- A3_27 -->
-				</div>
-			</div>
-		</div>
-    </ui:define>
-
-</ui:composition>
-
+			<style>
+				.form-label{width: 185px}
+			</style>
+	    </ui:define>
+	</ui:composition>
 </body>
 </html>
