--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/003/d/index.xhtml
@@ -1,181 +1,64 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:com="http://xmlns.jcp.org/jsf/component">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:com="http://xmlns.jcp.org/jsf/component"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-<ui:composition template="../../../../master/base.xhtml">
-
-    <ui:define name="htmlHead">
-        <com:scriptfile set="IGNITE"/>
-        <com:scriptfile path="../share/model.js"/>
-        <com:scriptfile path="qmm005.a.start.js"/>
-        <com:scriptfile path="qmm005.a.service.js"/>
-        <com:scriptfile path="qmm005.a.vm.js"/>
-        <com:stylefile path="qmm005.a.style.css"/>
-    </ui:define>
-    <ui:define name="content">
-        <div id="functions-area">
-            <!--A1_1 登録-->
-            <button tabindex="1" class="proceed" data-bind="click: registerProcessing"
-                    style="margin-left: 30px">#{i18n.getText('QMM005_1')  }</button>
-            <!--A1_2 マスタ修正ログ-->
-            <button tabindex="2" class="" data-bind="enable: false">#{i18n.getText('QMM005_2')}</button>
-            <!--A1_3  賞与の基準日設定-->
-            <button tabindex="3" class="" style="margin-left: 450px"
-                    data-bind="enable: false">#{i18n.getText('QMM005_3')}</button>
-            <!--A1_4 予備の基準日設定-->
-            <button tabindex="4" class="" data-bind="enable: false">#{i18n.getText('QMM005_4')}</button>
-            <!--A1_5 雇用区分の登録-->
-            <a tabindex="5" class="goout" data-bind="ntsLinkButton: { },enable: false"
-               style="margin-left: 30px">#{i18n.getText('QMM005_5')}</a>
-        </div>
-        <div class="contents-area">
-            <!--A2_1 給与・賞与の処理年月の設定を行います。-->
-            <div class="label" style="padding: 15px 25px;">#{i18n.getText('QMM005_6')}</div>
-            <!--A2_2 処理区分一覧-->
-            <div style="width: 1280px">
-                <div class="table-left" style="margin-left: 25px;">
-                    <table id="A2_2">
-                        <colgroup>
-                            <col width="35px"/>
-                            <col width="160px"/>
-                            <col width="70px"/>
-                            <col width="380px"/>
-                        </colgroup>
-                        <thead>
-                        <tr>
-                            <th class="ui-widget-header" rowspan="2"></th>
-                            <!--A2_3 処理区分-->
-                            <th class="ui-widget-header" rowspan="2">#{i18n.getText('QMM005_7')}</th>
-                            <!--A2_4 基準日の詳細設定-->
-                            <th class="ui-widget-header" rowspan="2"
-                                style="    white-space: normal;">#{i18n.getText('QMM005_8')}</th>
-                            <!--A2_5 給与-->
-                            <th class="ui-widget-header">#{i18n.getText('QMM005_9')}</th>
-                        </tr>
-                        <tr>
-                            <!--A2_6 次回給与支払日|社員抽出基準日-->
-                            <th class="ui-widget-header">#{i18n.getText('QMM005_10')}</th>
-                        </tr>
-                        </thead>
-                        <tbody data-bind="foreach: itemBinding">
-                        <tr>
-                            <td style="background-color: #CFF1A5;text-align: right">
-                                <!--A2_7 処理区分NO-->
-                                <div class="label"
-                                     data-bind="text:processInfomation.processCateNo"
-                                     style=" padding-bottom: 9px; "></div>
-                            </td>
-                            <td style="text-align: left;background-color: #CFF1A5">
-                                <!--A2_8 処理区分名称-->
-                                <div id="A2_8" class="flex valign-center" style="display: inline-block;"
-                                     data-bind="if: processInfomation.processCls() != '' ">
-
-                                    <label
-                                            style="width: 100px; vertical-align: text-bottom; padding-left: 5px;"
-                                            class="limited-label"
-                                            data-bind="text: processInfomation.processCls()"></label>
-
-                                    <!--A2_9 編集-->
-                                    <button tabindex="6" class="small" id="button_update"
-                                            data-bind="click: function (){$vm.showDialogD(processInfomation,0)}">#{i18n.getText('QMM005_11')}</button>
-                                </div>
-                                <com:ko-if bind="processInfomation.processCls() == ''">
-                                    <!--A4_1-->
-                                    <button id="button_register" tabindex="7" style="width: 150px; margin-left: 2px "
-                                            class="small"
-                                            data-bind="click: function (){$vm.showDialogD(processInfomation,1)}">#{i18n.getText('QMM005_21')}</button>
-                                </com:ko-if>
-                            </td>
-                            <td style="text-align: center">
-                                <!--A2_10 詳細設定-->
-                                <button tabindex="-1" class="small"
-                                        data-bind="enable: processInfomation.processCls(),click: function (){$vm.showDialogB(processInfomation.processCateNo)} ">#{i18n.getText('QMM005_12')}</button>
-                            </td>
-                            <td>
-                                <div class="flex valign-center">
-                                    <!--A2_11 処理年一覧-->
-                                    <div tabindex="8" id="processYears" data-bind="ntsComboBox: {
-                                name: '#[#QMM005_30]',
-                                 width:78,
-                                options: years,
-                                optionsValue: 'code',
-                                 visibleItemsCount: 8,
-                                 enable: processInfomation.processCls() != '',
-                                value:yaersSelected,
-                                dropDownAttachedToBody:true,
-                                columns:
-                                [ { prop: 'name', length: 3 },
-                                { prop: 'fix_leng', length: 10 }
-                            ]}"></div>
-                                    <!--A2_13 キャレット-->
-                                    <span
-                                            class="caret-right caret-inline"></span>
-                                    <!--A2_14 次回給与支払日-->
-                                    <div tabindex="9" id="yearMonthProcess" data-bind="ntsComboBox: {
-                            name: '#[#QMM005_47]',
-                            width:270,
-                            options: monthsSubcriceYear,
-                            optionsValue: 'code',
-                            visibleItemsCount: 8,
-                            value: monthsSelectd,
-                            optionsText: 'name',
-                            dropDownAttachedToBody:true,
-                            enable: processInfomation.processCls() != '',
-                            columns: [
-                                { prop: 'name', length: 5,lengthDropDown: 5 },
-
-                            ]}"
-                                         style="margin-left: 10px"></div>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <!--A3_1 対象雇用一覧-->
-                <div class="table-left" style="margin-left: 5px;">
-                    <table id="A3_1">
-                        <colgroup>
-                            <col width="400px"/>
-                        </colgroup>
-                        <thead>
-
-                        <tr>
-                            <!--A3_2 対象となる雇用-->
-                            <th class="ui-widget-header" rowspan="2"
-                                style="height: 45px;">#{i18n.getText('QMM005_19')}</th>
-                        </tr>
-
-                        </thead>
-                        <tbody data-bind="foreach: itemBinding">
-                        <tr>
-                            <td>
-                                <div class="flex valign-center">
-                                    <!--A3_3 雇用設定-->
-                                    <button tabindex="10" class="small"
-                                            data-bind=" click: function (){$vm.showDialogF(processInfomation.processCateNo, employeeList)}, enable: isNotAbolition() ">#{i18n.getText('QMM005_20')}</button>
-                                    <!--A3_4 対象雇用-->
-                                    <input id="EmployeeString" style="width: 285px;margin-left: 10px;"
-                                           data-bind="ntsTextEditor: {
-                                value: employeeString,
-                                readonly: true,
-                                enable:isNotAbolition(),
-                                }"/>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-        </div>
-    </ui:define>
-
-</ui:composition>
-
+	<ui:composition template="../../../../master/dialog.xhtml">
+		<ui:define name="htmlHead">
+			<script>var dialogSize = { width: 450, height: 650 };</script>
+			<com:scriptfile set="IGNITE" />
+			<com:scriptfile path="../share/constants.js"/>
+			<com:scriptfile path="qmm003.d.service.js" />
+			<com:scriptfile path="qmm003.d.vm.js" />
+			<com:scriptfile path="qmm003.d.start.js" />
+		</ui:define>
+		<ui:define name="content">
+			<div class="contents-area dialog-content" style="padding: 15px 25px">
+				<div class="valign-center control-group">
+					<!-- D1_1 -->
+					<span class="label">#{i18n.getText('QMM003_27')}</span>
+				</div>
+				<div class="valign-center control-group">
+					<!-- D1_2 -->
+					<span class="label">#{i18n.getText('QMM003_28')}</span>
+				</div>
+				<div class="valign-center control-group">
+					<!-- D1_3 -->
+					<i class="icon icon-searchbox pull-left" style="margin: 0px !important; position: relative !important"></i>
+					<!-- D1_4 -->
+					<div tabindex="1" style="width: 350px; padding-left: 8px" class="pull-left" data-bind="ntsSearchBox: {
+						targetKey: 'code', mode:'igTree', comId:'D2_1', items: items2, 
+						selected: selectedCodes, selectedKey: 'code', childField: 'children', fields: ['name', 'code']}" />
+				</div>
+				<!-- D2_1 -->
+				<table id="D2_1" tabindex="2"
+					data-bind="ntsTreeGridView:{
+						width: 400,
+						rows: 15,
+						name: '#[QMM003_8]',
+						dataSource: items2,
+						selectedValues: selectedCodes,
+						headers: headers,
+						primaryKey: 'code',
+						childDataKey: 'children',
+						primaryText: 'nodeText',
+						multiple: true,
+						enable: true,
+						initialExpandDepth: 1,
+						showCheckBox: true}"></table>
+			</div>
+			<div id="functions-area-bottom">
+				<!-- D3_1 -->
+				<button tabindex="3" class="x-large danger" data-bind="enable: selectedCodes().length > 0, click: deleteList">#{i18n.getText('QMM003_6')}</button>
+				<!-- D3_2 -->
+				<button tabindex="4" data-bind="click: cancel">#{i18n.getText('QMM003_25')}</button>
+			</div>
+			<style>
+				#D2_1_container{clear: both}
+			</style>
+		</ui:define>
+	</ui:composition>
 </body>
 </html>
