--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/qmm020.f.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/qmm020.f.style.css
@@ -31,3 +31,9 @@
 #F3_1_container tr th:NTH-CHILD(5) {
     border-right: none;
 }
+
+#img-calendar{
+    position: absolute;
+    z-index: 1;
+    margin: -14px -11px;
+}
